# crev

./: LICENSE  README.md  pyproject.toml
crev/: __init__.py  cli.py  config.py  fixer.py  formatter.py  git_utils.py  hook.py  ignore.py  reviewer.py
tests/: test_cli_invocation.py  test_fixer_security.py  test_ignore.py  test_parser_hardening.py  test_reviewer.py
