[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "crev"
version = "0.1.0"
description = "AI-powered code review using Claude Code — runs locally as a pre-commit hook. Uses your existing Claude subscription."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["code-review", "claude", "anthropic", "ai", "pre-commit", "static-analysis", "linter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Version Control :: Git",
]
dependencies = [
    "click>=8.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/yourname/crev"
Repository = "https://github.com/yourname/crev"
Issues = "https://github.com/yourname/crev/issues"

[project.scripts]
crev = "crev.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["crev"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
